# tiktok-data-scraper-rag-recommender

./: .gitignore  README.md  app.py  config.yaml  main.py  pyproject.toml
src/prediction_scripts/: create_vector_db.py  data_models.py  rag_llm.py
src/scraping_scripts/tiktok/: tiktok_comments.py
src/scraping_scripts/tiktok_creative_center/: merge_data.py  scrape_hashtags.py  scrape_songs.py
utility/: utilities.py
